--- a/BAZA_DANYCH/docker-compose.yml
+++ b/BAZA_DANYCH/docker-compose.yml
@@ -13,3 +13,10 @@ services:
       - ./scripts/DML:/DML
     ports:
       - "5432:5432"
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - "8888:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: admin
