--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.20.0",
