--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.20.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
