--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "js-cookie": "^3.0.5",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.20.0",
     "react-router-bootstrap": "^0.26.2",
