--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "esbuild": "^0.19.11",
     "js-cookie": "^3.0.5",
     "mdbreact": "^5.2.0",
     "react": "^18.2.0",
