--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@syncfusion/ej2-react-maps": "^24.1.41",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
@@ -18,11 +21,13 @@
     "bootstrap-icons": "^1.11.2",
     "esbuild": "^0.19.11",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
     "react-router": "^6.20.0",
     "react-router-bootstrap": "^0.26.2",
@@ -57,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-leaflet": "^3.0.0",
     "@types/react-router-bootstrap": "^0.26.6"
   }
 }
